frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-web-app
  template:
    metadata:
      labels:
        app: static-web-app
    spec:
      containers:
        - name: static-web-app
          image: nensiravaliya28/day10:v2
          ports:
            - containerPort: 80
          resources:
              limits:
                cpu: 500m
              requests:
                cpu: 200m

---

apiVersion: v1
kind: Service
metadata:
  name: static-web-app-service
spec:
  selector:
    app: static-web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort  # Use NodePort type to expose the service outside the cluster
