ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
spec:
  tls:
    - hosts:
        - host1example.com
        - host2example.com
        - my-domain.com
        - my-self-signed-domain.com
      secretName: self-signed-tls
  rules:
    - host: host1example.com
      http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: static-web-app-service
                port:
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: static-web-app-service
                port:
                  number: 80
    - host: host2example.com
      http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: static-web-app-service
                port:
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: static-web-app-service
                port:
                  number: 80

    - host: my-self-signed-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static-web-app-service
                port:
                  number: 80
